kubernetes/photoprism/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
  labels:
    pod-security.kubernetes.io/enforce: baseline #restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline #restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: baseline #restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: photoprism
    app.kubernetes.io/instance: photoprism
