kubernetes/photoprism/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app: photoprism
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: photoprism
  replicas: 1
  serviceName: photoprism
  template:
    metadata:
      labels:
        app: photoprism
      annotations:
        enable.version-checker.io/photoprism: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      hostname: photoprism
      restartPolicy: Always
      automountServiceAccountToken: false
      serviceAccountName: photoprism-sa
      securityContext:
        # fsGroup: 12342
        # runAsGroup: 12342
        # runAsUser: 12342
        runAsNonRoot: true
      containers:
        - name: photoprism
          image: photoprism/photoprism:220629-bullseye
          ports:
            - containerPort: 2342
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          volumeMounts:
            - name: photoprism-media
              mountPath: /assets/photos/originals/Photos
              subPath: Arthur/files/Photos/
            - name: photoprism-media
              mountPath: /assets/photos/originals/Trips-Events
              subPath: Arthur/files/Trips-Events/
            - name: photoprism-cache
              mountPath: /assets/cache
            - name: photoprism-storage
              mountPath: /photoprism/storage
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              cpu: 300m
              memory: 384Mi
            requests:
              cpu: 50m
              memory: 192Mi
          securityContext:
            # runAsGroup: 12342
            # runAsUser: 12342
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - all
      volumes:
        - name: photoprism-media
          persistentVolumeClaim:
            claimName: photoprism-media
            readOnly: true
        - name: photoprism-cache
          persistentVolumeClaim:
            claimName: photoprism-cache-pvc
        - name: photoprism-storage
          persistentVolumeClaim:
            claimName: photoprism-storage-pvc
        - name: tmp
          emptyDir:
            sizeLimit: 1Mi
