kubernetes/photoprism/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 2342
      protocol: TCP
      targetPort: 2342
  selector:
    app: photoprism
